Small fix in html

--- a/views/new.html
+++ b/views/new.html
@@ -70,8 +70,10 @@
           <label for="outcome">Outcome</label>
           <textarea class="form-control" id="outcome" rows="20" required="required"></textarea>
         </div>
-        <button class="btn btn-default" id="cancel">Cancel</button>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <div class="form-group">
+          <button class="btn btn-default" id="cancel">Cancel</button>
+          <button type="submit" class="btn btn-primary">Create</button>
+        </div>
       </form>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
