--- a/views/new.html
+++ b/views/new.html
@@ -47,28 +47,28 @@
     </header>
     <div class="container">
       <h2>Register meeting</h2>
-      <form method="post">
+      <form method="post" action="/meetings/create">
         <div class="form-group">
           <label for="title">Title</label>
-          <input type="text" class="form-control" id="title" required="required">
+          <input type="text" class="form-control" id="title" required="required" name="title">
         </div>
         <div class="form-group">
           <label for="date">Date</label>
-          <input type="text" class="form-control" id="date" required="required">
+          <input type="text" class="form-control" id="date" required="required" name="date">
         </div>
         <div class="form-group has-error has-feedback">
           <label for="attendees">Attendees</label>
-          <input type="text" class="form-control" id="attendees" required="required" aria-describedby="inputError2Status">
+          <input type="text" class="form-control" id="attendees" required="required" aria-describedby="inputError2Status" name="attendees">
           <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
           <span id="inputError2Status" class="sr-only">(error)</span>
         </div>
         <div class="form-group">
           <label for="agenda">Agenda</label>
-          <textarea class="form-control" id="agenda" rows="20" required="required"></textarea>
+          <textarea class="form-control" id="agenda" rows="20" required="required" name="agenda"></textarea>
         </div>
         <div class="form-group">
           <label for="outcome">Outcome</label>
-          <textarea class="form-control" id="outcome" rows="20" required="required"></textarea>
+          <textarea class="form-control" id="outcome" rows="20" required="required" name="outcome"></textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-default" id="cancel">Cancel</button>
