--- a/views/meetings/new.html
+++ b/views/meetings/new.html
@@ -50,7 +50,7 @@
       <form method="post" action="/meetings/create">
         <div class="form-group">
           <label for="title">Title</label>
-          <input type="text" class="form-control" id="title" required="required" name="title">
+          <input type="text" class="form-control" id="title" name="title">
         </div>
         <div class="form-group">
           <label for="date">Date</label>
