--- a/views/meetings/new.html
+++ b/views/meetings/new.html
@@ -48,10 +48,13 @@
     <div class="container">
       <h2>Register meeting</h2>
       <form method="post" action="/meetings/create">
-        <div class="form-group">
+        <div class="form-group {{ if .FormErrors.Title }}has-error has-feedback{{ end }}">
           <label for="title">Title</label>
           <input type="text" class="form-control" id="title" name="title" value="{{ .Meeting.Title }}">
-
+          {{ if .FormErrors.Title }}
+          <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+          <span id="inputError2Status" class="sr-only">{{ .FormErrors.Title }}</span>
+          {{ end }}
         </div>
         <div class="form-group">
           <label for="date">Date</label>
