--- a/views/meetings/index.html
+++ b/views/meetings/index.html
@@ -31,8 +31,8 @@
       <ul class="list-group">
         {{ range . }}
         <li class="list-group-item">
-            <a href="meetings/">{{ .Title }}</a>
-            <a href="" class="pull-right"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
+            <a href="/meetings/{{ .GetId.Hex }}/edit">{{ .Title }}</a>
+            <a href="/meetings/{{ .GetId.Hex }}/delete" class="pull-right"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
             <br><time datetime="2001-05-15">21/3/2015</time>
         </li>
         {{ end }}             
