--- a/views/meetings/edit.html
+++ b/views/meetings/edit.html
@@ -1,6 +1,7 @@
 {{ define "contents" }}
 <h2>Edit meeting</h2>
-<form method="post" action="/meetings/{{ .Meeting.GetId.Hex }}/update">
+<form method="post" action="/meetings/update">
+  <input type="hidden" name="id" value="{{ .Meeting.GetId.Hex }}">
   <div class="form-group {{ if .FormErrors.Title }}has-error has-feedback{{ end }}">
     <label for="title">Title</label>
     <input type="text" class="form-control" id="title" name="title" value="{{ .Meeting.Title }}">
@@ -39,7 +40,7 @@
   </div>
   <div class="form-group">
     <button class="btn btn-default" id="cancel">Cancel</button>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Update</button>
   </div>
 </form>
 {{ end }}
