--- a/views/meetings/index.html
+++ b/views/meetings/index.html
@@ -1,54 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Meetmo</title>
-
-    <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href="main.css" rel="stylesheet">
-  </head>
-  <body>
-    {{ template "header" . }}
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>
-            Meetings
-            <div class="pull-right">
-              <a href="/meetings/new" class="btn btn-primary">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Register meeting
-              </a>
-            </div>
-          </h2>
-        </div>
+{{ define "contents" }}
+<div class="row">
+  <div class="col-md-12">
+    <h2>
+      Meetings
+      <div class="pull-right">
+        <a href="/meetings/new" class="btn btn-primary">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Register meeting
+        </a>
       </div>
-      <p class="lead">Mayo 2015</p>
-      <ul class="list-group">
-        {{ range . }}
-        <li class="list-group-item">
-            <a href="/meetings/{{ .GetId.Hex }}/edit">{{ .Title }}</a>
-            <a href="/meetings/{{ .GetId.Hex }}/delete" class="pull-right"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
-            <br><time datetime="2001-05-15">21/3/2015</time>
-        </li>
-        {{ end }}             
-      </ul>
-      <footer class="footer">
-        <div class="center-block">
-            <a href="https://github.com/svera/jwt-php-test" title="See project in Github">
-              <i class="fa fa-github fa-lg"></i>
-            </a>
-        </div>
-      </footer>
-    </div>
+    </h2>
+  </div>
+</div>
+<p class="lead">Mayo 2015</p>
+<ul class="list-group">
+  {{ range . }}
+  <li class="list-group-item">
+      <a href="/meetings/{{ .GetId.Hex }}/edit">{{ .Title }}</a>
+      <a href="/meetings/{{ .GetId.Hex }}/delete" class="pull-right"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a>
+      <br><time datetime="2001-05-15">21/3/2015</time>
+  </li>
+  {{ end }}             
+</ul>
+{{ end }}
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </body>
-</html>
+{{ define "js"}}
+{{ end }}
