--- a/views/meetings/new.html
+++ b/views/meetings/new.html
@@ -1,99 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Meetmo - New meeting</title>
-    <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker.css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-default navbar-static-top">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">Meetmo</a>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
-            <form class="navbar-form navbar-left" role="search" method="get">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-search">
-                  <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                  </button>
-                </span>
-              </div>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="">Logout <span class="glyphicon glyphicon-log-out" aria-hidden="true"></a>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>      
-    </header>
-    <div class="container">
-      <h2>Register meeting</h2>
-      <form method="post" action="/meetings/create">
-        <div class="form-group {{ if .FormErrors.Title }}has-error has-feedback{{ end }}">
-          <label for="title">Title</label>
-          <input type="text" class="form-control" id="title" name="title" value="{{ .Meeting.Title }}">
-          {{ if .FormErrors.Title }}
-          <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-          <span id="inputError2Status" class="sr-only">{{ .FormErrors.Title }}</span>
-          {{ end }}
-        </div>
-        <div class="form-group">
-          <label for="date">Date</label>
-          <input type="text" class="form-control" id="date" required="required" name="date">
-        </div>
-        <div class="form-group has-error has-feedback">
-          <label for="attendees">Attendees</label>
-          <input type="text" class="form-control" id="attendees" required="required" aria-describedby="inputError2Status" name="attendees" value="{{ .Meeting.Attendees }}">
-          <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-          <span id="inputError2Status" class="sr-only">(error)</span>
-        </div>
-        <div class="form-group">
-          <label for="agenda">Agenda</label>
-          <textarea class="form-control" id="agenda" rows="20" required="required" name="agenda">{{ .Meeting.Agenda }}</textarea>
-        </div>
-        <div class="form-group">
-          <label for="outcome">Outcome</label>
-          <textarea class="form-control" id="outcome" rows="20" required="required" name="outcome">{{ .Meeting.Outcome }}</textarea>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-default" id="cancel">Cancel</button>
-          <button type="submit" class="btn btn-primary">Create</button>
-        </div>
-      </form>
+{{ define "contents" }}
+  <h2>Register meeting</h2>
+  <form method="post" action="/meetings/create">
+    <div class="form-group {{ if .FormErrors.Title }}has-error has-feedback{{ end }}">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" id="title" name="title" value="{{ .Meeting.Title }}">
+      {{ if .FormErrors.Title }}
+      <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+      <span id="inputError2Status" class="sr-only">{{ .FormErrors.Title }}</span>
+      {{ end }}
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
-    <script type="text/javascript">
-    $('button#cancel').on('click', function() {
-      window.history.go(-1);
-    })
-    $('#date').datepicker({
-      weekStart: 1,
-      todayHighlight: true
-    });
-    $('#date').datepicker('update', new Date());
-    </script>
-  </body>
-</html>
+    <div class="form-group">
+      <label for="date">Date</label>
+      <input type="text" class="form-control" id="date" required="required" name="date">
+    </div>
+    <div class="form-group has-error has-feedback">
+      <label for="attendees">Attendees</label>
+      <input type="text" class="form-control" id="attendees" required="required" aria-describedby="inputError2Status" name="attendees" value="{{ .Meeting.Attendees }}">
+      <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+      <span id="inputError2Status" class="sr-only">(error)</span>
+    </div>
+    <div class="form-group">
+      <label for="agenda">Agenda</label>
+      <textarea class="form-control" id="agenda" rows="20" required="required" name="agenda">{{ .Meeting.Agenda }}</textarea>
+    </div>
+    <div class="form-group">
+      <label for="outcome">Outcome</label>
+      <textarea class="form-control" id="outcome" rows="20" required="required" name="outcome">{{ .Meeting.Outcome }}</textarea>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-default" id="cancel">Cancel</button>
+      <button type="submit" class="btn btn-primary">Create</button>
+    </div>
+  </form>
+{{ end }}
+
+{{ define "js"}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript">
+  $('button#cancel').on('click', function() {
+    window.history.go(-1);
+  })
+  $('#date').datepicker({
+    weekStart: 1,
+    todayHighlight: true
+  });
+  $('#date').datepicker('update', new Date());
+  </script>    
+{{ end }}
